--- a/index.html
+++ b/index.html
@@ -139,20 +139,23 @@
         </div>
         <div class="nav-item">
             <div class="container">
-                <div class="nav-depart d-lg-block d-none">
-                    <div class="depart-btn">
-                        <i class="ti-menu"></i>
-                        <span>All departments</span>
-                        <ul class="depart-hover">
-                            <li class="active"><a href="#">Craft 1</a></li>
-                            <li><a href="#">Craft 2</a></li>
-                            <li><a href="#">Craft 3</a></li>
-                            <li><a href="#">Craft 4</a></li>
-                        </ul>
-                    </div>
-                </div>
+
                 <nav class="nav-menu mobile-menu p-0 d-lg-block d-none">
                     <ul>
+                        <li>
+                            <div class="nav-depart d-lg-block d-none">
+                                <div class="depart-btn">
+                                    <i class="ti-menu"></i>
+                                    <span>All departments</span>
+                                    <ul class="depart-hover">
+                                        <li class=""><a href="#">Craft 1</a></li>
+                                        <li><a href="#">Craft 2</a></li>
+                                        <li><a href="#">Craft 3</a></li>
+                                        <li><a href="#">Craft 4</a></li>
+                                    </ul>
+                                </div>
+                            </div>
+                        </li>
                         <li class="active"><a href="index.html">Home</a></li>
                         <li><a href="#">Collection</a>
                             <ul class="dropdown">
